--- a/Fork/fork/package.json
+++ b/Fork/fork/package.json
@@ -19,15 +19,18 @@
     "react": "18.2.0",
     "react-kakao-maps-sdk": "~1.0.1",
     "react-native": "0.73.6",
+    "react-native-element-dropdown": "^2.12.0",
     "react-native-gesture-handler": "~2.14.0",
-    "react-native-image-picker": "4.0.6",
+    "react-native-image-picker": "^4.0.6",
     "react-native-linear-gradient": "2.8.3",
+    "react-native-overlay": "^0.5.0",
     "react-native-paper": "4.9.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-translator": "*",
     "react-native-webview": "13.6.4",
-    "react-router-dom": "6.23.0"
+    "react-router-dom": "6.23.0",
+    "toggle-switch-react-native": "^3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
