--- a/Fork/fork/app.json
+++ b/Fork/fork/app.json
@@ -15,13 +15,17 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSLocationWhenInUseUsageDescription": "This app needs access to your location to enhance the navigation experience.",
+        "NSLocationAlwaysUsageDescription": "This app needs access to your location to enhance the navigation experience even when the app is in the background."
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
     },
     "web": {
       "favicon": "./assets/favicon.png"
