--- a/Fork/fork/package.json
+++ b/Fork/fork/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-community/geolocation": "3.2.1",
     "@react-native-community/masked-view": "^0.1.0",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
@@ -15,6 +16,8 @@
     "expo": "^51.0.2",
     "expo-font": "~11.10.3",
     "expo-linear-gradient": "~12.7.2",
+    "expo-location": "^17.0.1",
+    "expo-permissions": "^14.4.0",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-kakao-maps-sdk": "~1.0.1",
