--- a/Fork/fork/package.json
+++ b/Fork/fork/package.json
@@ -14,10 +14,12 @@
     "@react-navigation/stack": "5.14.3",
     "expo": "^51.0.2",
     "expo-font": "~11.10.3",
+    "expo-image-picker": "^15.0.5",
     "expo-linear-gradient": "~12.7.2",
     "expo-location": "^17.0.1",
     "expo-permissions": "^14.4.0",
     "expo-status-bar": "~1.11.1",
+    "jwt-decode": "^4.0.0",
     "react": "18.2.0",
     "react-kakao-maps-sdk": "~1.0.1",
     "react-native": "0.73.6",
