--- a/Fork/fork/package.json
+++ b/Fork/fork/package.json
@@ -12,6 +12,7 @@
     "@react-native-community/masked-view": "^0.1.0",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "5.14.3",
+    "axios": "^1.7.2",
     "expo": "^51.0.2",
     "expo-font": "~11.10.3",
     "expo-image-picker": "^15.0.5",
