--- a/Fork/fork/app.json
+++ b/Fork/fork/app.json
@@ -25,7 +25,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "foodie.fork"
     },
     "web": {
       "favicon": "./assets/favicon.png"
