--- a/Fork/fork/package.json
+++ b/Fork/fork/package.json
@@ -7,6 +7,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@babel/runtime": "^7.24.7",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/geolocation": "3.2.1",
     "@react-native-community/masked-view": "^0.1.0",
@@ -25,6 +26,7 @@
     "expo-location": "^17.0.1",
     "expo-permissions": "^14.4.0",
     "expo-status-bar": "~1.11.1",
+    "expo-system-ui": "^3.0.5",
     "i18n-js": "^4.4.3",
     "jwt-decode": "^4.0.0",
     "react": "18.2.0",
