--- a/Fork/fork/app.json
+++ b/Fork/fork/app.json
@@ -19,7 +19,8 @@
       "infoPlist": {
         "NSLocationWhenInUseUsageDescription": "This app needs access to your location to enhance the navigation experience.",
         "NSLocationAlwaysUsageDescription": "This app needs access to your location to enhance the navigation experience even when the app is in the background."
-      }
+      },
+      "bundleIdentifier": "foodie.fork"
     },
     "android": {
       "adaptiveIcon": {
