--- a/Fork/package.json
+++ b/Fork/package.json
@@ -11,50 +11,51 @@
     "@babel/runtime": "^7.24.7",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/geolocation": "3.2.1",
-    "@react-native-community/masked-view": "^0.1.0",
     "@react-native-community/push-notification-ios": "^1.11.0",
+    "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/native": "^6.0.10",
-    "@react-navigation/stack": "5.14.3",
+    "@react-navigation/stack": "^6.3.29",
     "axios": "^1.7.2",
-    "expo": "^51.0.2",
+    "expo": "^51.0.12",
     "expo-barcode-scanner": "^13.0.1",
     "expo-camera": "^15.0.10",
-    "expo-font": "~11.10.3",
+    "expo-font": "~12.0.7",
     "expo-image-manipulator": "^12.0.5",
     "expo-image-picker": "^15.0.5",
-    "expo-linear-gradient": "~12.7.2",
+    "expo-linear-gradient": "~13.0.2",
     "expo-localization": "~15.0.3",
     "expo-location": "^17.0.1",
     "expo-permissions": "^14.4.0",
-    "expo-status-bar": "~1.11.1",
+    "expo-status-bar": "~1.12.1",
     "expo-system-ui": "^3.0.5",
+    "glob": "^10.4.1",
     "i18n-js": "^4.4.3",
     "jwt-decode": "^4.0.0",
     "react": "18.2.0",
-    "react-dom": "^18.3.1",
-    "react-kakao-maps-sdk": "~1.0.1",
-    "react-native": "0.73.6",
+    "react-dom": "18.2.0",
+    "react-kakao-maps-sdk": "^1.1.27",
+    "react-native": "^0.74.2",
     "react-native-element-dropdown": "^2.12.0",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-image-picker": "^4.0.6",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-image-picker": "^7.1.2",
     "react-native-linear-gradient": "2.8.3",
     "react-native-numeric-input": "^1.9.1",
     "react-native-overlay": "^0.5.0",
-    "react-native-paper": "4.9.2",
+    "react-native-paper": "^5.12.3",
     "react-native-permissions": "^4.1.5",
     "react-native-qrcode-scanner": "^1.5.5",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-svg": "^15.3.0",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
     "react-native-translator": "*",
     "react-native-vector-icons": "^10.1.0",
-    "react-native-webview": "13.6.4",
+    "react-native-webview": "13.8.6",
     "react-qr-code": "^2.0.13",
-    "react-router-dom": "6.23.0",
+    "react-router-dom": "^6.23.1",
     "toggle-switch-react-native": "^3.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.24.7",
     "prettier": "^3.3.1"
   },
   "private": true,
