--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,9 @@ services:
     env_file: .env
     build:
       dockerfile: ./Dockerfile
+      args:
+        - EXPO_USERNAME=${EXPO_USERNAME}
+        - EXPO_PASSWORD=${EXPO_PASSWORD}
     image: fork_expo
     pull_policy: build
     stdin_open: true
@@ -14,3 +17,4 @@ services:
       - "19001:19001"
       - "19002:19002"
     restart: unless-stopped
+    command: npx expo start
